Implement a basic setup of the monaco editor

--- a/BlazorPaste/Client/_Imports.razor
+++ b/BlazorPaste/Client/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using BlazorPaste.Client
 @using BlazorPaste.Client.Shared
+@using BlazorPaste.Client.Models
+
+@using BlazorMonaco
