--- a/BlazorPaste/Client/Shared/NavMenu.razor
+++ b/BlazorPaste/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
-﻿<MudNavMenu>
-    <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
-    <MudNavLink Href="counter" Match="NavLinkMatch.Prefix">Counter</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix">Fetch Data</MudNavLink>
+﻿<MudNavMenu Margin="Margin.Dense" Color="Color.Secondary">
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
+    <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Numbers">Counter</MudNavLink>
+    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Notes">My Pastes</MudNavLink>
 </MudNavMenu>
