--- a/BlazorPaste/Client/_Imports.razor
+++ b/BlazorPaste/Client/_Imports.razor
@@ -10,6 +10,7 @@
 @using BlazorPaste.Client
 @using BlazorPaste.Client.Shared
 @using BlazorPaste.Client.Models
+@using BlazorPaste.Shared
 
 @using BlazorMonaco
 @using MudBlazor
