Clean up user pastes page

--- a/BlazorPaste/Client/Pages/FetchData.razor
+++ b/BlazorPaste/Client/Pages/FetchData.razor
@@ -5,19 +5,19 @@
 @attribute [Authorize]
 @inject HttpClient Http
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Your Pastes</PageTitle>
 
 <MudPaper Class="pa-16 ma-2" Elevation="3">
-    <MudTable Items="@pastes.Take(4)" Hover="true" Breakpoint="Breakpoint.Sm" Loading="@_loading" LoadingProgressColor="Color.Info">
+    <MudTable Items="@pastes.Take(4)" RowStyle="white-space: nowrap; overflow: hidden; text-overflow:ellipsis; width: 200px" Dense="true" Hover="true" Breakpoint="Breakpoint.Sm" Loading="@_loading" LoadingProgressColor="Color.Info">
         <HeaderContent>
             <MudTh>ID</MudTh>
-            <MudTh>Body</MudTh>
             <MudTh>Language</MudTh>
+            <MudTh>Body</MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd DataLabel="ID">@context.ID</MudTd>
-            <MudTd DataLabel="Body">@context.Body</MudTd>
             <MudTd DataLabel="Language">@context.Language</MudTd>
+            <MudTd DataLabel="Body">@context.Body</MudTd>
         </RowTemplate>
     </MudTable>
 </MudPaper>
