Implement Displaying of all paste items

--- a/BlazorPaste/Client/Shared/NavMenu.razor
+++ b/BlazorPaste/Client/Shared/NavMenu.razor
@@ -2,4 +2,5 @@
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Numbers">Counter</MudNavLink>
     <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Notes">My Pastes</MudNavLink>
+    <MudNavLink Href="allpastes" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DataExploration">All Pastes</MudNavLink>
 </MudNavMenu>
